# guadalupe-river-scm

./: .env.example  .gitignore  CLAUDE.md  DATA_DICTIONARY.md  METHODS.md  Makefile  README.md  REPRODUCTION.md  manuscript.html  manuscript.qmd  pyproject.toml  references.bib
R/: 01_scm_estimate.R  02_placebo_tests.R  03_did_zbp.R  04_did_hpi.R  05_ascm.R  06_wild_bootstrap.R  07_honestdid.R  08_scm_sector.R  09_did_lodes.R  10_did_zbp_sector.R
config/: project.yaml  sources.yaml
data/metadata/: source_log.json
data/results/: ascm_att.csv  ascm_summary.txt  ascm_weights.csv  did_binary_results.txt  did_event_study.csv  did_hpi_binary_results.txt  did_hpi_event_study.csv  did_intensity_results.txt  did_zbp_sector_event_study.csv  did_zbp_sector_results.txt  honestdid_sensitivity.csv  honestdid_summary.txt  hpi_recovery_timing.csv  intime_gap.csv  loo_synthetic_series.csv  placebo_gaps.csv  placebo_rmspe_ratios.csv  scm_balance.csv  scm_pretrend_rmspe.txt  scm_sector_gaps.csv  scm_sector_summary.csv  scm_sector_weights.csv  scm_synthetic_series.csv  scm_weights.csv  wild_bootstrap_details.txt  wild_bootstrap_results.csv
notebooks/: 01_panel_diagnostics.ipynb  02_donor_screening.ipynb  03_did_zbp_analysis.ipynb  04_housing_hpi_analysis.ipynb  05_lodes_panel.ipynb  06_zbp_sector_panel.ipynb
src/: config.py  pipeline.py
src/acquire/: bea_income.py  bls_laus.py  bls_qcew.py  census_acs.py  census_bds.py  census_bps.py  census_cbp.py  census_qwi.py  census_zbp.py  donor_pool.py  fema_declarations.py  fema_hma.py  fema_ia.py  fema_nfip.py  fema_pa.py  hud_cdbgdr.py  (+7 more)
(+10 files in other folders)
